--- a/src/app/product-section/product-section.component.html
+++ b/src/app/product-section/product-section.component.html
@@ -2,8 +2,10 @@
     <app-header></app-header>
 <section class="hero">
     <div class="hero-content">
-      <h1>ACS CLOUD TPMS PROJECT</h1>
-      <p>Find your everyday favorite</p>
+     <!-- <h1>ACS CLOUD TPMS PROJECT</h1> -->
+  <markdown class="markdown-body" src="assets/HLP_USERSGAS_A_G001_R01_DEFAULT_01_ENG_20231219.md"></markdown>
+  
+      <!-- <p>Find your everyday favorite</p> -->
       <!-- <a href="#" class="btn">Shop Now</a> -->
     </div>
   </section>
